[gd_scene load_steps=17 format=3 uid="uid://oc13h3au02ro"]

[ext_resource type="Script" path="res://Player_Controller/scripts/Player_Character/player_character.gd" id="1_h0t42"]
[ext_resource type="Script" path="res://Player_Controller/scripts/Player_Character/HUD.gd" id="2_tvwwj"]
[ext_resource type="Texture2D" uid="uid://bjh5ic6qy4jtl" path="res://Player_Controller/HUD ASSETS/crosshair001.png" id="3_7f0mw"]
[ext_resource type="Texture2D" uid="uid://uidicgaojgdi" path="res://Player_Controller/HUD ASSETS/crosshair046.png" id="4_l32wb"]
[ext_resource type="Script" path="res://Player_Controller/scripts/Weapon_State_Machine/Weapon_State_Machine.gd" id="5_wuueu"]
[ext_resource type="Resource" uid="uid://yc1f2j7pl4vr" path="res://Player_Controller/scripts/Weapon_State_Machine/Weapon_Resources/blasterI.tres" id="6_tpjp5"]
[ext_resource type="Resource" uid="uid://bwrs8ensewkgc" path="res://Player_Controller/scripts/Weapon_State_Machine/Weapon_Resources/blasterL.tres" id="7_gf6gb"]
[ext_resource type="Resource" uid="uid://c1jg0ifn7yvve" path="res://Player_Controller/scripts/Weapon_State_Machine/Weapon_Resources/blasterN.tres" id="8_vhb8h"]
[ext_resource type="PackedScene" uid="uid://bvlnghquw6pe2" path="res://Player_Controller/Weapon_Models/blasterN.glb" id="11_ql478"]
[ext_resource type="PackedScene" uid="uid://c7sp7l3lsswwa" path="res://Player_Controller/Weapon_Models/blasterD.glb" id="12_876w4"]
[ext_resource type="PackedScene" uid="uid://drns2kevx2ak2" path="res://Player_Controller/Weapon_Models/blasterA.glb" id="13_4xj2x"]
[ext_resource type="AnimationLibrary" uid="uid://uybino34n0sj" path="res://Player_Controller/weapon_animation.res" id="13_lmhsg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_73v4a"]
radius = 0.55642
height = 1.7

[sub_resource type="Animation" id="Animation_tvd50"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.148, 1.379, -0.398)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterL:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.117, 1.16, -0.512)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterL:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -3.14159, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("blasterN:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.193, 1.255, -0.643)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("blasterN:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 3.14159, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ys4uk"]
_data = {
"RESET": SubResource("Animation_tvd50")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_tc1ik"]
size = Vector3(1.60191, 1.70789, 1.83518)

[node name="Player_Character" type="CharacterBody3D"]
collision_layer = 2
floor_max_angle = 0.872665
script = ExtResource("1_h0t42")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("2_tvwwj")

[node name="Overlay" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="debug_hud" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/debug_hud"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/debug_hud/HBoxContainer"]
layout_mode = 2
text = "Current Weapon: "

[node name="CurrentWeapon" type="Label" parent="CanvasLayer/debug_hud/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/debug_hud"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/debug_hud/HBoxContainer2"]
layout_mode = 2
text = "Ammo:"

[node name="CurrentAmmo" type="Label" parent="CanvasLayer/debug_hud/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/debug_hud"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/debug_hud/HBoxContainer3"]
layout_mode = 2
text = "Weapon Stack:"

[node name="WeaponStack" type="Label" parent="CanvasLayer/debug_hud/HBoxContainer3"]
layout_mode = 2

[node name="Main_Sight" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_7f0mw")
stretch_mode = 3

[node name="Hit_Sight" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_l32wb")
stretch_mode = 3

[node name="Hit_Sight_Timer" type="Timer" parent="CanvasLayer/Hit_Sight"]
wait_time = 0.05
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("CapsuleShape3D_73v4a")

[node name="Camera" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55, 0)

[node name="MainCamera" type="Camera3D" parent="Camera"]
unique_name_in_owner = true
cull_mask = 524287
current = true

[node name="Weapons_Manager" type="Node3D" parent="Camera/MainCamera" node_paths=PackedStringArray("Animation_Player")]
script = ExtResource("5_wuueu")
Animation_Player = NodePath("Weapons_Models/AnimationPlayer")
_weapon_resources = Array[Resource("res://Player_Controller/scripts/Weapon_State_Machine/weapon_resource.gd")]([ExtResource("6_tpjp5"), ExtResource("7_gf6gb"), ExtResource("8_vhb8h")])
Start_Weapons = Array[String](["blasterN", "blasterI"])

[node name="Weapons_Models" type="Node3D" parent="Camera/MainCamera/Weapons_Manager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.54919, 0)

[node name="blasterN" type="Node3D" parent="Camera/MainCamera/Weapons_Manager/Weapons_Models"]
transform = Transform3D(-1, 0, 2.53518e-06, 0, 1, 0, -2.53518e-06, 0, -1, 0.193, 1.255, -0.643)
visible = false

[node name="blasterN" parent="Camera/MainCamera/Weapons_Manager/Weapons_Models/blasterN" instance=ExtResource("11_ql478")]

[node name="blasterI" type="Node3D" parent="Camera/MainCamera/Weapons_Manager/Weapons_Models"]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, -0.148, 1.379, -0.398)
visible = false

[node name="blasterD" parent="Camera/MainCamera/Weapons_Manager/Weapons_Models/blasterI" instance=ExtResource("12_876w4")]

[node name="blasterL" type="Node3D" parent="Camera/MainCamera/Weapons_Manager/Weapons_Models"]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, 0.117, 1.16, -0.512)
visible = false

[node name="blasterA" parent="Camera/MainCamera/Weapons_Manager/Weapons_Models/blasterL" instance=ExtResource("13_4xj2x")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/MainCamera/Weapons_Manager/Weapons_Models"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ys4uk"),
"Global": ExtResource("13_lmhsg")
}

[node name="BulletPoint" type="Marker3D" parent="Camera/MainCamera/Weapons_Manager"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.313352, -0.240567, -0.907474)
gizmo_extents = 0.21

[node name="Pick_Up_Detection" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pick_Up_Detection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.389632, 0)
shape = SubResource("BoxShape3D_tc1ik")

[connection signal="timeout" from="CanvasLayer/Hit_Sight/Hit_Sight_Timer" to="CanvasLayer" method="_on_hit_sight_timer_timeout"]
[connection signal="Add_Signal_To_HUD" from="Camera/MainCamera/Weapons_Manager" to="CanvasLayer" method="_on_weapons_manager_add_signal_to_hud"]
[connection signal="Connect_Weapon_To_HUD" from="Camera/MainCamera/Weapons_Manager" to="CanvasLayer" method="_on_weapons_manager_connect_weapon_to_hud"]
[connection signal="Hit_Successfull" from="Camera/MainCamera/Weapons_Manager" to="CanvasLayer" method="_on_weapons_manager_hit_successfull"]
[connection signal="Update_Ammo" from="Camera/MainCamera/Weapons_Manager" to="CanvasLayer" method="_on_weapons_manager_update_ammo"]
[connection signal="Update_WeaponStack" from="Camera/MainCamera/Weapons_Manager" to="CanvasLayer" method="_on_weapons_manager_update_weapon_stack"]
[connection signal="Weapon_Changed" from="Camera/MainCamera/Weapons_Manager" to="CanvasLayer" method="_on_weapons_manager_weapon_changed"]
[connection signal="body_entered" from="Pick_Up_Detection" to="Camera/MainCamera/Weapons_Manager" method="_on_pick_up_detection_body_entered"]
